; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_initposition.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_initposition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64)* @initposition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @initposition(i32* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @luaL_optinteger(i32* %7, i32 3, i32 1)
  store i64 %8, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp ule i64 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %11
  %16 = load i64, i64* %6, align 8
  %17 = sub i64 %16, 1
  store i64 %17, i64* %3, align 8
  br label %31

18:                                               ; preds = %11
  %19 = load i64, i64* %5, align 8
  store i64 %19, i64* %3, align 8
  br label %31

20:                                               ; preds = %2
  %21 = load i64, i64* %6, align 8
  %22 = sub nsw i64 0, %21
  %23 = load i64, i64* %5, align 8
  %24 = icmp ule i64 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %20
  %26 = load i64, i64* %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = sub nsw i64 0, %27
  %29 = sub i64 %26, %28
  store i64 %29, i64* %3, align 8
  br label %31

30:                                               ; preds = %20
  store i64 0, i64* %3, align 8
  br label %31

31:                                               ; preds = %30, %25, %18, %15
  %32 = load i64, i64* %3, align 8
  ret i64 %32
}

declare dso_local i64 @luaL_optinteger(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
